--- a/view/informesView.mustache
+++ b/view/informesView.mustache
@@ -73,6 +73,17 @@
         </div>
 
         <div class="chart-container shadow p-4 bg-light rounded">
+            <div class="row mb-3 text-center">
+                <div class="col-md-4">
+                    <input type="date" id="fecha_inicio" class="form-control" placeholder="Fecha de inicio">
+                </div>
+                <div class="col-md-4">
+                    <input type="date" id="fecha_fin" class="form-control" placeholder="Fecha de fin">
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
+                </div>
+            </div>
             <canvas id="miGraficoTorta" width="500" height="500"
                     data-labels='{{labels}}'
                     data-data='{{data}}'
@@ -103,6 +114,17 @@
         </div>
 
         <div class="chart-container shadow p-4 bg-light rounded">
+            <div class="row mb-3 text-center">
+                <div class="col-md-4">
+                    <input type="date" id="fecha_inicio" class="form-control" placeholder="Fecha de inicio">
+                </div>
+                <div class="col-md-4">
+                    <input type="date" id="fecha_fin" class="form-control" placeholder="Fecha de fin">
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
+                </div>
+            </div>
             <canvas id="miGraficoTorta" width="500" height="500"
                     data-labels='{{labels}}'
                     data-data='{{data}}'
@@ -133,6 +155,17 @@
         </div>
 
         <div class="chart-container shadow p-4 bg-light rounded">
+            <div class="row mb-3 text-center">
+                <div class="col-md-4">
+                    <input type="date" id="fecha_inicio" class="form-control" placeholder="Fecha de inicio">
+                </div>
+                <div class="col-md-4">
+                    <input type="date" id="fecha_fin" class="form-control" placeholder="Fecha de fin">
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
+                </div>
+            </div>
             <canvas id="miGraficoTorta" width="500" height="500"
                     data-labels='{{labels}}'
                     data-data='{{data}}'
@@ -164,6 +197,17 @@
             </table>
         </div>
         <div class="chart-container shadow p-4 bg-light rounded">
+            <div class="row mb-3 text-center">
+                <div class="col-md-4">
+                    <input type="date" id="fecha_inicio" class="form-control" placeholder="Fecha de inicio">
+                </div>
+                <div class="col-md-4">
+                    <input type="date" id="fecha_fin" class="form-control" placeholder="Fecha de fin">
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
+                </div>
+            </div>
             <canvas id="miGraficoTorta" width="500" height="500"
                     data-labels='{{labels}}'
                     data-data='{{data}}'
