--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -28,6 +28,7 @@
             </div>
         {{/pregunta}}
 
+
         {{#respuestaDada}}
             <div class="result-container mt-4">
                 {{#correcta}}
@@ -37,15 +38,11 @@
                     <div class="alert alert-info" role="alert">
                         +1 Punto
                     </div>
-                    <div class="mt-4">
-                        <div class="row">
-                            <div class="col-6 mb-2">
-                                <button type="button" class="btn btn-danger w-100" onclick="reportar()">Reportar</button>
-                            </div>
-                            <div class="col-6 mb-2">
-                                <button type="button" class="btn btn-success w-100" onclick="window.location.href='../partida/traerPregunta'">Siguiente pregunta</button>
-                            </div>
-                        </div>
+                    <div class="progress mt-3">
+                        <div id="progress-bar2" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="col-6 mb-2">
+                        <button type="button" style="display: none" id="pregunta32" class="btn btn-success w-100" onclick="window.location.href='../partida/traerPregunta'">Siguiente pregunta</button>
                     </div>
                 {{/correcta}}
                 {{^correcta}}
@@ -100,6 +97,7 @@
     </div>
 </main>
 
+<script src="../public/js/cuentaRegresiva2.js"></script>
 <script src="../public/js/cuentaRegresiva.js"></script>
 
 
