--- a/view/blankView.mustache
+++ b/view/blankView.mustache
@@ -1,10 +1,12 @@
-<main class="mx-auto text-center">
-{{#gif}}
-    <img src="/public/you-didn't-say-the-magic-word-jurassic-park.gif" width="600">
-{{/gif}}
+<main class="container d-flex flex-column align-items-center text-center mt-4">
+    {{#gif}}
+        <img src="/public/you-didn't-say-the-magic-word-jurassic-park.gif" class="img-fluid mb-3" alt="GIF">
+    {{/gif}}
+
     {{#frases}}
-    <div class="alert alert-danger text-center mt-3" role="alert">
-        {{frase}}
-    </div>
+        <div class="alert alert-danger text-center mt-3" role="alert">
+            {{frase}}
+        </div>
     {{/frases}}
 </main>
+
