--- a/view/header.mustache
+++ b/view/header.mustache
@@ -47,7 +47,7 @@
                                 <div class="form-check form-switch d-flex align-items-center justify-content-center gap-2">
                                     <i class="bi bi-sun" id="sun-icon"></i>
                                     <input
-                                            class="form-check-input"
+                                            class="form-check-input theme-switch"
                                             type="checkbox"
                                             id="themeSwitch"
                                             style="margin: 0;">
@@ -74,7 +74,7 @@
                     <div class="form-check form-switch d-none d-lg-flex align-items-center justify-content-center gap-2">
                         <i class="bi bi-sun" id="sun-icon"></i>
                         <input
-                                class="form-check-input"
+                                class="form-check-input theme-switch"
                                 type="checkbox"
                                 id="themeSwitch"
                                 style="margin: 0;">
