--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -15,12 +15,12 @@
                 <button type="button" class="btn btn-success" onclick="window.location.href='/usuario/registrar'">Registrarse</button>
             </div>
             {{#error}}
-                <div class="alert alert-danger" role="alert">
+                <div class="alert alert-danger mt-4" role="alert">
                     {{error}}
                 </div>
             {{/error}}
             {{#success}}
-                <div class="alert alert-success" role="alert">
+                <div class="alert alert-success mt-4" role="alert">
                     {{success}}
                 </div>
             {{/success}}
